unpackaged/main/default/objects/n2de__Distributor_schedule_log__c/n2de__Distributor_schedule_log__c.object-meta.xml
<CustomObject>
    <description>Scheduler log</description>
    <label>Distributor schedule log</label>
    <nameField>
        <label>Distributor schedule name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distributor schedule logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>