unpackaged/main/default/objects/n2de__Distributor_schedule_log__c/fields/n2de__Distribution_chain_start_date__c.field-meta.xml
<CustomField>
    <fullName>n2de__Distribution_chain_start_date__c</fullName>
    <label>Distribution chain start date</label>
    <type>DateTime</type>
</CustomField>