unpackaged/main/default/objects/n2de__Distributor_schedule_log__c/fields/n2de__Distribution_end_date__c.field-meta.xml
<CustomField>
    <fullName>n2de__Distribution_end_date__c</fullName>
    <label>Distribution end date</label>
    <type>DateTime</type>
</CustomField>