unpackaged/main/default/objects/n2de__Distributor_schedule_log__c/fields/n2de__Failing_distributors__c.field-meta.xml
<CustomField>
    <fullName>n2de__Failing_distributors__c</fullName>
    <label>Failing distributors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>