unpackaged/main/default/objects/n2de__Distributor_schedule_log__c/fields/n2de__Has_distributions_in_error__c.field-meta.xml
<CustomField>
    <fullName>n2de__Has_distributions_in_error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has distributions in error</label>
    <type>Checkbox</type>
</CustomField>