unpackaged/main/default/objects/n2de__Distributor_schedule_log__c/fields/n2de__Is_health_checker_restart__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_health_checker_restart__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the Health Checker needed to restart any part of the app</description>
    <label>Health checker restarted DE</label>
    <type>Checkbox</type>
</CustomField>