unpackaged/main/default/objects/n2de__Distributor_schedule_log__c/fields/n2de__Next_apex_job_id__c.field-meta.xml
<CustomField>
    <fullName>n2de__Next_apex_job_id__c</fullName>
    <label>Next apex job id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>