unpackaged/main/default/objects/n2de__Distributor_schedule_log__c/fields/n2de__Processing_end_heap_usage__c.field-meta.xml
<CustomField>
    <fullName>n2de__Processing_end_heap_usage__c</fullName>
    <description>Heap usage at the end of the distribution.</description>
    <label>Processing end heap usage (bytes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>