unpackaged/main/default/objects/n2de__Distributor_schedule_log__c/fields/n2de__Processing_max_heap_usage__c.field-meta.xml
<CustomField>
    <fullName>n2de__Processing_max_heap_usage__c</fullName>
    <description>Max heap usage during the distribution.</description>
    <label>Processing max heap usage (bytes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>