unpackaged/main/default/objects/n2de__Distributor_schedule_log__c/fields/n2de__Processing_time__c.field-meta.xml
<CustomField>
    <fullName>n2de__Processing_time__c</fullName>
    <description>Time taken for the distribution run in seconds.</description>
    <label>Processing time (sec)</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>