unpackaged/main/default/objects/n2de__Distributor_schedule_log__c/fields/n2de__Processing_type__c.field-meta.xml
<CustomField>
    <fullName>n2de__Processing_type__c</fullName>
    <label>Log type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>