unpackaged/main/default/objects/n2de__Distributor_schedule_log__c/fields/n2de__Records_assigned__c.field-meta.xml
<CustomField>
    <fullName>n2de__Records_assigned__c</fullName>
    <label>Records assigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>