unpackaged/main/default/objects/n2de__Distributor_schedule_log__c/fields/n2de__Run_record_limit__c.field-meta.xml
<CustomField>
    <fullName>n2de__Run_record_limit__c</fullName>
    <description>The Distributor record limit used for this run.</description>
    <label>Run record limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>